--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "core-js": "2.5.5",
     "rxjs": "5.5.10",
     "reflect-metadata": "0.1.12",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "brace": "0.11.1"
   },
   "devDependencies": {
     "@angular/language-service": "5.2.10",
     "@angular/compiler-cli": "5.2.10",
     "@ngtools/webpack": "1.9.8",
+    "@types/ace": "0.0.37",
     "@types/requirejs": "2.1.31",
     "awesome-typescript-loader": "4.0.1",
     "typescript": "2.8.1",
