--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@ngtools/webpack": "1.9.8",
     "@types/ace": "0.0.37",
     "@types/requirejs": "2.1.31",
-    "awesome-typescript-loader": "4.0.1",
     "typescript": "2.8.1",
     "css-loader": "0.28.11",
     "to-string-loader": "1.1.5",
@@ -31,8 +30,9 @@
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
     "progress-bar-webpack-plugin": "1.11.0",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.6.1"
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.14",
+    "webpack-dev-server": "3.1.3"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
