--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "paths": {
+      "*": [
+        "./node_modules/*"
+      ]
+    },
     "typeRoots": [
       "./node_modules/@types"
     ],
